# rosa_docker

./: .env  Dockerfile  README.md  demo.sh  setup.py
deps_for_docker/global_path_planning/: CMakeLists.txt  package.xml
deps_for_docker/global_path_planning/config/: path_params.yaml  road_map_5624.yaml
deps_for_docker/global_path_planning/msg/: PoseArrayArray.msg  PoseFloat.msg  PoseFloatArray.msg
deps_for_docker/global_path_planning/scripts_OLD/: SIPP_ros.py  dummy_goal_server.py  sipp.py
deps_for_docker/global_path_planning/srv/: SetPixelGoal.srv
deps_for_docker/global_path_planning_BACKUP/: CMakeLists.txt  package.xml  setup.py
deps_for_docker/global_path_planning_BACKUP/launch/: global_planning.launch
deps_for_docker/global_path_planning_BACKUP/map/: modified_ed_map_cropped_final.xcf
deps_for_docker/global_path_planning_BACKUP/scripts/: global_path_planner  gp_final_code_ros.py  local_planner.py  road_map_robot_bidi.py
src/rosa/: CMakeLists.txt  package.xml
src/turtle_agent/: CMakeLists.txt  package.xml  setup.py
src/turtle_agent/launch/: agent.launch
src/turtle_agent/scripts/: prompts.py  turtle_agent.py
src/turtle_agent/scripts/tools/: navigation_tools.py
