<?xml version="1.0"?>
<package format="2">
  <name>global_path_planning</name>
  <version>0.0.0</version>
  <description>The global_path_planning package</description>
  <maintainer email="gokul@todo.todo">gokul</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Add ALL necessary dependencies -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
