<?xml version="1.0"?>
<package format="2">
  <name>rosa</name>
  <version>0.0.1</version> <!-- Use a version, e.g., 0.0.1 or match pyproject.toml -->
  <description>The ROSA core library package.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer> <!-- Fill this in -->
  <license>Apache 2.0</license> <!-- Or your chosen license -->

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Add build/exec depends for libraries rosa itself uses -->
  <build_depend>python3-yaml</build_depend>
  <exec_depend>python3-yaml</exec_depend>
  <build_depend>python3-dotenv</build_depend>
  <exec_depend>python3-dotenv</exec_depend>
  <!-- Add other non-ROS Python deps if needed by rosa core, using ROS package names if possible -->
  <!-- Langchain/OpenAI deps are handled by pip, not here -->

  <export>
    <!-- Export python modules -->
    <!-- setup.py handles the actual installation details -->
  </export>
</package>